# autorl-research

./: .gitignore  README.md
A2LS/: LICENSE  README.md  video.py
a2ls/: README.md  conda_env.yml  encoder.py  logger.py  train.py  (+1 more)
agentlightning/: .gitignore  README.md  pyproject.toml
agentlightning/agentlightning/: __init__.py  client.py  config.py  logging.py  reward.py  trace.py  trainer.py
agentlightning/agentlightning/cli/: agentops_server.py  vllm.py
agentlightning/agentlightning/instrumentation/: __init__.py  agentops.py  agentops_langchain.py  litellm.py  verl_chat_scheduler.py  vllm.py
agentlightning/agentlightning/instrumentation/verl_patch/verl/trainer/: main_ppo.py
agentlightning/agentlightning/instrumentation/verl_patch/verl/trainer/config/: ppo_trainer.yaml
agentlightning/agentlightning/instrumentation/verl_patch/verl/trainer/ppo/: core_algos.py  ray_trainer.py
agentlightning/agentlightning/instrumentation/verl_patch/verl/utils/dataset/: rl_dataset.py
agentlightning/agentlightning/prompt/: README.md  client.py  resource.py  server.py  types.py
agentlightning/examples/: .gitignore
agentlightning/examples/apo/: apo.py  apo_client.py
agentlightning/examples/calc_x/: .env.example  README.md  calc_agent.py  train.sh
agentlightning/examples/spider/: README.md  sql_agent.py  train.sh
agentlightning/examples/spider/spider_eval/: convert_dataset.py  evaluation.py  exec_eval.py  parse.py  process_sql.py
agentlightning/scripts/: git_diff.sh  restart_ray.sh  verl_git_apply.sh  verl_git_diff.sh
agentlightning/tests/: test_config.py
(+47 files in other folders)
