[project]
name = "agentlightning"
version = "0.1"
description = "Agent Lightning"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "graphviz",
  "psutil",
  "setproctitle",
  "flask",
  "agentops",
]

[project.optional-dependencies]
dev = [
  "flake8",
  "pytest",
  "hatch",
]
experiment = [
  "graphviz",
  "random-word",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentlightning"]
